--- a/public/css/index.css
+++ b/public/css/index.css
@@ -1,95 +1,161 @@
 .task1 {
+transform: rotate(0);
+transition: transform 1s ease;
 }
 
 .task1:hover {
+    transform: rotate(270deg);
 }
 
 .task2 {
+  transform: scaleY(1);
+ 
 }
 
 .task2:hover {
+    transform: scaleY(-0.7);
+    transition: 1s linear; 
 }
 
 .task3 {
+    transform: rotateY(1);
 }
 
 .task3:hover {
+    transform: rotateY(45deg);
+    transition: 1s ease-out;
+    
 }
 
 .task4 {
+    transform: scale(1);
 }
 
 .task4:hover {
+    transform: scale(1.3);
+    transition: 1s linear;
 }
 
 .task5 {
+    transform: scaleX(1);
 }
 
 .task5:hover {
+    transform: scaleX(1.5);
+    transition: 1s linear;
 }
 
 .task6 {
+    transform: rotateX(1);
 }
 
 .task6:hover {
+   transform: rotateX(60deg);
+   transition: 1s ease-out;
 }
 
 .task7 {
+    transform: skew(1);
 }
 
 .task7:hover {
+    transform: skew(30deg);
+    transition: 1s ease-out;
 }
 
 .task8 {
+    transform: skew(1);
 }
 
 .task8:hover {
+    transform: skew(25deg);
+    transition: 1s ease-out;
 }
 
 .task9 {
+    transform: skewY(1);
 }
 
 .task9:hover {
+    transform: skewY(20deg);
+    transition: 1s ease-out;
 }
 
+
 .task10 {
+    transform: translate(1, 1);
 }
 
 .task10:hover {
+    transform: translate(60px, 40px);
+    transition: 1s ease-in;
 }
 
 .task11 {
+    transform: translateX(1);
 }
 
 .task11:hover {
+    transform: translateX(50px);
+    transition: 1s ease-out;
 }
 
 .task12 {
+    transform: translateY(1);
 }
 
 .task12:hover {
+    transform: translateY(30px);
+    transition: 1s linear;
 }
 
 .task13 {
+transform: translate3d(20px, 20px, 1);
+transition: transform 0.5s ease-in-out;
 }
 
 .task13:hover {
+transform: translate3d(20px, 20px, 20px) rotate3d(2, 2, 2, 90deg);
 }
 
 .task14 {
+    transform: translateZ(1);
+    transition: transform 1s ease-in;
 }
 
 .task14:hover {
+    transform: rotate3d(2, 3, 3, 45deg) translateZ(40px);
 }
 
 .task15 {
+    transform: matrix3d(1);
+    transition: transform 1s ease-out;
 }
 
 .task15:hover {
+transform: matrix3d(0.4, 1, 1.1, 0, 1, 0.4, 1, 0, 1.1, 0, 0.4, 0, 1, 1.1, 1, 1);
 }
 
 .task16 {
+    transform: matrix3d(1);
+    transition: transform 1s linear;
 }
 
 .task16:hover {
+    transform: matrix3d(0.5,
+        0,
+        -0.866025,
+        0,
+        0.595877,
+        1.2,
+        -1.03209,
+        0,
+        0.866025,
+        0,
+        0.5,
+        0,
+        25.9808,
+        0,
+        15,
+        1);
 }
